<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Заголовок -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp" />

        <!-- Номер помещения -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/room_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRoomNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Тип помещения -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_type"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/spinnerRoomType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="12dp" />

        <!-- Тип оборудования -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equip_type"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/spinnerEquipType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="12dp" />

        <!-- Марка -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/equip_brand">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEquipBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:flexWrap="wrap"
            app:justifyContent="space_around">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_flexGrow="1"
                android:layout_marginEnd="8dp"
                android:importantForAccessibility="yes"
                android:textSize="16sp"
                android:padding="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                style="?attr/materialButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_flexGrow="1"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:padding="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                app:layout_flexGrow="1"
                android:layout_marginEnd="8dp"
                android:importantForAccessibility="yes"
                android:textSize="16sp"
                android:padding="12dp"
                android:visibility="gone" />

        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>

</ScrollView>