<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Заголовок -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/administration"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table"
            android:textSize="16sp"
            android:layout_marginEnd="8dp" />

        <Spinner
            android:id="@+id/tableSpinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:padding="8dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/dataListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp" />

    <!-- Кнопки -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:layout_marginBottom="20dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_marginEnd="8dp"
            android:importantForAccessibility="yes"
            android:textSize="16sp"
            android:padding="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            style="?attr/materialButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:padding="12dp" />

    </LinearLayout>

</LinearLayout>