<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Список на весь экран -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="96dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_room" />

    <!-- Кнопка "Добавить" -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@android:color/white"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Кнопка для администрирования (расположена выше кнопки Добавить) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/administration"
        app:srcCompat="@android:drawable/ic_menu_manage"
        app:tint="@android:color/white"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="88dp" />

    <!-- Новая кнопка "Удалить все записи" (расположена выше кнопки Администрирования) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete_all_records"
        app:srcCompat="@android:drawable/ic_menu_delete"
        app:tint="@android:color/white"
        app:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="160dp" />

</androidx.constraintlayout.widget.ConstraintLayout>